forums interface css reset bugs, homepage modal overlaping bug

--- a/sass/editor.sass
+++ b/sass/editor.sass
@@ -34,6 +34,7 @@ html, body
 	padding: 0 !important
 
 	aside
+
 		ul
 			margin-left: 0 !important
 			padding: 0 !important
@@ -54,6 +55,7 @@ html, body
 		p
 			margin: 0
 			padding: 0
+
 footer
 	ul
 		margin: 0
@@ -152,7 +154,7 @@ input[type=submit]
 	color: #000
 	text-transform: uppercase
 	font-weight: 700
-	cursor: pointer
+	cursor: pointer !important
 	background: none
 	width: auto
 	display: inline-block
@@ -191,8 +193,22 @@ input[type=submit]
 	#tag-input 
 		width: 85% !important
 
+	aside
+		li
+			font-size: 0.8rem !important
+
+@media only screen and (max-height: 425px) and (max-width: 812px)
+	aside
+		li
+			font-size: 0.8rem !important
+
 
 p.tags-error
 	color: red
 	display: none
 	margin-bottom: 0 !important
+
+.banner-upload-msg
+	color: green
+	margin-top: -0.5em
+	display: none
