--- a/sass/home.sass
+++ b/sass/home.sass
@@ -126,7 +126,7 @@ main
 	z-index: 30
 	transform: translate(-50%, -50%) scale(0.9)
 	// background: #fafafa
-	display: flex
+	display: grid
 	flex-direction: column
 	border: none
 	padding: 0
@@ -229,12 +229,12 @@ main
 	#reg-modal
 		width: 85% !important
 
-	#reg-modal
-		display: grid !important
+	// #reg-modal
+	// 	display: grid !important
 
 @media only screen and (max-width: 1024px) and (max-height: 425px)
 	#reg-modal
-		display: grid !important
+		// display: grid !important
 		grid-template-columns: 1fr 3fr
 		font-size: 0.9rem !important
 		min-width: 80%
