--- a/sass/main.sass
+++ b/sass/main.sass
@@ -156,18 +156,15 @@ i.fa-times
 		color: #999
 
 aside
-	// height: 100%
 	width: 20vw
 	background: #0C0C0C
 	min-width: 350px
 	position: relative
 	min-height: 100vh
-	// min-height: 100vh
 	transition: 0.5s
 
 	.side-line
 		height: 100vh
-		// min-height: 100vh
 		width: 2vw
 		background: #0A0A0A
 		position: fixed
@@ -190,6 +187,7 @@ aside
 		
 		li
 			margin-top: 2.5em
+			list-style: none !important
 
 			.fas, .far
 				display: none
